Rework structure, jdk 16, remove spring api